testdata/baselines/reference/submodule/conformance/moduleExportAssignment5.errors.txt
axios.js(10,16): error TS2339: Property 'default' does not exist on type 'Axios'.


==== axios.js (1 errors) ====
    class Axios {
        constructor() {
        }
        m() { }
    }
    var axios = new Axios();
    // none of the 3 references should have a use-before-def error
    axios.m()
    module.exports = axios;
    module.exports.default = axios;
                   ~~~~~~~
!!! error TS2339: Property 'default' does not exist on type 'Axios'.
    